feat: add keyword management
