# app/src/setting/entities/Keyword.ts
@@ -1,0 +1,6 @@
+type Keyword = {
+    id: string
+    word: string
+}
+
+export default Keyword;
