# server/routes/api.php
@@ -1,9 +1,13 @@
 <?php declare(strict_types=1);
 
 use App\Http\Controllers\ArticleListController;
+use App\Http\Controllers\KeywordController;
+use App\Http\Controllers\KeywordListController;
 use App\Http\Controllers\ProductListController;
 use App\Http\Controllers\ProductMarkController;
 use App\Http\Resources\UserResource;
+use App\Models\Keyword;
+use Domains\Article\ValueObjects\Id;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -24,4 +28,6 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('/articles', ArticleListController::class);
     Route::post('/products/{id}/mark', ProductMarkController::class);
     Route::get('/marked-products', ProductListController::class);
+
+    Route::apiResource('keywords', KeywordController::class)->only('index', 'store', 'destroy');
 });
