# server/src/App/Http/Requests/StoreKeywordRequest.php
@@ -1,0 +1,36 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Domains\Article\Entities\Keyword;
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreKeywordRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'word' => 'required|max:255',
+        ];
+    }
+
+    public function convert(): Keyword
+    {
+        $data = $this->validated();
+
+        return Keyword::fromString($data['word']);
+    }
+}
